slick slider added

--- a/css/style.css
+++ b/css/style.css
@@ -50,4 +50,13 @@ svg.radial-progress {
     text-anchor: middle;
   }
 
-  
+
+/* slick slider css imp */
+
+  /* the slides */
+.slick-slide {
+  margin: 0 10px;
+/* the parent */
+.slick-list {
+  margin: 0 -10px;
+}
